--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -17,10 +17,10 @@ Based on Underscores http://underscores.me/, (C) 2012-2016 Automattic, Inc.
 Normalizing styles have been helped along thanks to the fine work of
 Bo-Yi Wu (https://github.com/appleboy/), Nicolas Gallagher (https://github.com/necolas), and Jonathan Neal (https://github.com/jonathantneal).
 */
-
+@import "node_modules/susy/sass/susy";
 @import "bourbon";
 @import "utilities/variables/index";
-@import "neat";
+// @import "neat";
 @import "utilities/mixins/index";
 @import "utilities/animate/index";
 
