--- a/assets/sass/structure/_layout.scss
+++ b/assets/sass/structure/_layout.scss
@@ -14,38 +14,10 @@
 	}
 }
 
-// .site-header,
-// .site-footer {
+.site-content {
+	margin: rem(20) auto;
 
-// 	@include media($tablet-landscape) {
-// 		padding: 0 2 * $gutter;
-// 	}
-// }
-
-// .site-content {
-// 	margin: rem(20) auto;
-
-// 	@include media($desktop) {
-// 		margin: rem(40) auto rem(60);
-// 	}
-// }
-
-// .primary {
-// 	@include fill-parent;
-
-// 	@include media($tablet-landscape) {
-// 		@include span-columns(8);
-// 	}
-// }
-
-// .secondary {
-// 	@include fill-parent;
-
-// 	@include media($tablet-landscape) {
-// 		@include span-columns(4);
-// 	}
-// }
-
-.wrap {
-	@include container;
+	@include susy-media($desktop) {
+		margin: rem(40) auto rem(60);
+	}
 }
