--- a/assets/sass/modules/_header.scss
+++ b/assets/sass/modules/_header.scss
@@ -3,10 +3,35 @@
 //--------------------------------------------------------------
 
 .site-title {
-	font-size: rem(48);
+	font-size: rem(24);
+	margin: 0;	
+
+	a {
+		text-decoration: none;
+	}
+
+	@include susy-media($phone-landscape){
+		font-size: rem(36);
+	}
+}
+
+.site-header {
+	border-bottom: 3px solid black;
 }
 
 .site-description {
 	font-size: rem(24);
 	margin: 0 0 rem(24) 0;
+}
+
+.site-branding {
+
+	@include susy-media($phone-landscape) {
+		text-align: center;
+	}
+
+	@include susy-media($tablet-landscape) {
+		@include span(6 of 12);
+		text-align: left;
+	}
 }
