--- a/assets/sass/modules/_navigation.scss
+++ b/assets/sass/modules/_navigation.scss
@@ -19,13 +19,23 @@ a {
 
 // Navicon menu
 .menu-toggle {
-	display: block;
+	display: inherit;
+	margin-left: auto;
+	background-color: transparent;
+	color: $color-black;
+	margin-top: rem(-36);
+
+	&:hover,
+	&:active,
+	&:focus, {
+		background-color: transparent;
+	}
 
 	.icon {
 		@include size(rem(12) rem(14));
 
 		display: inline-block;
-		fill: $color-white;
+		fill: $color-black;
 		margin-right: rem(5);
 		vertical-align: middle;
 	}
@@ -33,6 +43,7 @@ a {
 	.menu-toggle-text {
 		display: inline-block;
 		vertical-align: middle;
+		background-color: $color-white;
 	}
 
 	@include susy-media($phone-landscape) {
@@ -42,23 +53,43 @@ a {
 
 // Main navigation container
 .main-navigation {
-	@include size(100% auto);
 
-	clear: both;
-	display: block;
-	float: left;
+	@include susy-media($phone-landscape){
+		text-align: center;
+	}
+
+	@include susy-media($tablet-landscape) {
+		@include span(6 of 12);
+		text-align: right;
+	}
 
 	// Menu area
 	ul {
 		display: none;
 
 		@include susy-media($phone-landscape) {
-			display: block;
+			display: inline-block;
+		}
+
+		@include susy-media($tablet-landscape) {
+			display: inline-block;
+			line-height: rem(58);
+		}
+
+		li:last-child {
+			margin:0;
 		}
 	}
 
 	&.toggled ul {
 		display: block;
+
+		li {
+			margin: 0;
+			display: block;
+			text-align: right;
+			float: none;
+		}
 	}
 }
 
