Changed link color to black

--- a/assets/sass/utilities/variables/_colors.scss
+++ b/assets/sass/utilities/variables/_colors.scss
@@ -73,6 +73,6 @@ $color-background-screen-reader: $color-whitesmoke;
 $color-text-screen-reader: $color-blue;
 
 // Links
-$color-link: $color-blue;
-$color-link-visited: $color-blue;
-$color-link-hover: $color-blue;
+$color-link: $color-black;
+$color-link-visited: $color-black;
+$color-link-hover: $color-black;
